message("entering src")

include_directories(${CMAKE_SOURCE_DIR}/src)

#add_subdirectory(activitygen)
#add_subdirectory(dfrouter)
#add_subdirectory(duarouter)
add_subdirectory(foreign)
#add_subdirectory(gui)
#add_subdirectory(guinetload)
#add_subdirectory(guisim)
#add_subdirectory(jtrrouter)
#add_subdirectory(marouter)
#add_subdirectory(mesogui)
add_subdirectory(mesosim)
add_subdirectory(microsim)
#add_subdirectory(netbuild)
#add_subdirectory(netedit)
#add_subdirectory(netgen)
#add_subdirectory(netimport)
add_subdirectory(netload)
#add_subdirectory(netwrite)
#add_subdirectory(od)
#add_subdirectory(osgview)
#add_subdirectory(polyconvert)
#add_subdirectory(router)
#add_subdirectory(tools)
add_subdirectory(traci-server)
#add_subdirectory(traci_testclient)
add_subdirectory(utils)


add_executable( sumo sumo_main.cpp)
target_link_libraries(sumo netload ms mscfmodels mslcmodels msdevices msoutput mspedestrians mstrigger msactions mstraffic_lights mesosim utgeom utvehicle utshapes utemissions traci-server uttraci utoptions utxml utcommon utimportio utiodevices foreignphemlight foreigntcpip xerces-c ${FOX_LIBRARY} PROJ)

add_executable(sumo-gui guisim_main.cpp)
target_link_libraries(sumo-gui gui guinetload guisim guidialogs utguiwindows utguiglobjects utguidiv utguisettings utguiimages utguitracker utfoxtools osgview netload ms mscfmodels mslcmodels msdevices msoutput mspedestrians mstrigger msactions mstraffic_lights mesosim utgeom utvehicle utshapes utemissions traci-server uttraci utoptions utxml utcommon utimportio utiodevices foreignphemlight foreigntcpip xerces-c ${FOX_LIBRARY} PROJ)
