noinst_LIBRARIES = libmicrosimpeds.a

libmicrosimpeds_a_SOURCES = MSPerson.cpp MSPerson.h \
MSPModel.cpp MSPModel.h \
MSPModel_Striping.cpp MSPModel_Striping.h \
MSPModel_NonInteracting.cpp MSPModel_NonInteracting.h \
MSPModel_NonInteracting_GRPC.cpp MSPModel_NonInteracting_GRPC.h \
MSPRCPState.cpp MSPRCPState.h \
noninteracting.grpc.pb.cc noninteracting.grpc.pb.h \
noninteracting.pb.cc nointeracting.pb.h \
MSGRPCClient.cpp MSGRPCClient.h \
MSPModelRemoteControlled.cpp MSPModelRemoteControlled.h \
hybridsim.grpc.pb.cc hybridsim.grpc.pb.h \
hybridsim.pb.cc hybridsim.pb.h
